legg til nye miks grupper for rangerte